--- a/extras/chalklines_bright/chalklines_bright_alacritty.yml
+++ b/extras/chalklines_bright/chalklines_bright_alacritty.yml
@@ -1,26 +1,6 @@
-local template = require 'chalklines.lib.template'
-
-local M = {}
-
-function M.generate(theme)
-  local colors = theme.generated
-  local alacrittyColors = {}
-
-  for k, v in pairs(colors) do
-    if type(v) == 'string' then
-      -- Alacrrity does not use the format `#` for hex colors it uses `0x`
-      alacrittyColors[k] = v:gsub('^#', '0x')
-    else
-      alacrittyColors[k] = v
-    end
-  end
-
-  alacrittyColors.meta = theme.meta
-
-  local content = [[
 # Chalklines Alacritty Colors
-# Style: ${meta.name}
-# Upstream: ${meta.url}
+# Style: chalklines_bright
+# Upstream: https://github.com/jzone1366/chalklines.nvim/raw/main/extra/chalklines_bright/chalklines_bright_alacritty.yml
 colors:
   # Default colors
   primary:
@@ -49,11 +29,4 @@ colors:
   indexed_colors:
     { index: 16, color: '${orange}' }
     { index: 17, color: '${pink}' }
-  ]]
-
-  local alacritty = template.parse_template_str(content, alacrittyColors)
-
-  return alacritty
-end
-
-return M
+  
