--- a/extras/chalklines_bright/chalklines_bright_kitty.conf
+++ b/extras/chalklines_bright/chalklines_bright_kitty.conf
@@ -1,19 +1,10 @@
-local template = require 'chalklines.lib.template'
-
-local M = {}
-
-function M.generate(theme)
-  local kittyColors = theme.generated
-  kittyColors.meta = theme.meta
-
-  local content = [[
 # Chalklines colors for Kitty
-## name: ${meta.name}
-## upstream: ${meta.url}
+## name: chalklines_bright
+## upstream: https://github.com/jzone1366/chalklines.nvim/raw/main/extra/chalklines_bright/chalklines_bright_kitty.conf
 
 background ${bg}
 foreground ${fg}
-selection_background ${selection}
+selection_background #F1FFFF
 selection_foreground ${fg}
 url_color ${green}
 cursor ${orange}
@@ -47,11 +38,4 @@ color15 ${white}
 # extended colors
 color16 ${orange}
 color17 ${pink}
-  ]]
-
-  local kitty = template.parse_template_str(content, kittyColors)
-
-  return kitty
-end
-
-return M
+  
